--- a/Cartrekk/Cartrekk/GoogleService-Info.plist
+++ b/Cartrekk/Cartrekk/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>Ameek-Singh.Cartrekk</string>
+	<string>cse115.cartrekk</string>
 	<key>PROJECT_ID</key>
 	<string>cartrekk-weloveswift</string>
 	<key>STORAGE_BUCKET</key>
 	<string>cartrekk-weloveswift.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1044130592051:ios:5683a375b0c371214ffa46</string>
 </dict>
